--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,36 +1,40 @@
-name: DH GO Public EPG - Daily Update
+name: Scrape EPG Guide
 
-# This schedule makes sure the job runs every day at 6:00 AM in Kathmandu Time (which is 12:15 AM UTC).
 on:
   schedule:
-    - cron: '15 0 * * *'  # The cron expression tells GitHub to run the workflow at 12:15 AM UTC, which is 6:00 AM Kathmandu Time.
-  workflow_dispatch:  # This allows you to manually trigger the workflow whenever needed.
+    - cron: '*/3 * * * *' # Every 10 min
 
 jobs:
-  update-epg:
-    runs-on: ubuntu-latest  # The job will run on the latest version of Ubuntu.
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout the code from the repository
-      uses: actions/checkout@v3  # This gets the latest version of your code from GitHub.
 
-    - name: Set up Python 3.12 environment
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'  # Makes sure Python 3.12 is used for the script.
+      - name: checkout repo content
+        uses: actions/checkout@v4.1.1 # checkout the repository content to github runner
 
-    - name: Install dependencies (requests library)
-      run: |
-        python -m pip install --upgrade pip  # Ensures pip (Python's package installer) is up to date.
-        pip install requests  # Installs the "requests" library that the script uses to fetch data.
-
-    - name: Run the DH GO EPG script to generate XML files
-      run: python gotv_epg.py  # Runs the Python script that generates the XML and compressed XML files.
-
-    - name: Upload the generated XML files as GitHub artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: epg-xml-files  # This will name the uploaded artifact as "epg-xml-files".
-        path: |
-          gotv.xml  # The uncompressed XML file.
-          gotv.xml.gz  # The compressed version of the XML file.
+      - name: setup python
+        uses: actions/setup-python@v5.0.0
+        with:
+          python-version: '3.10.7' # install the python version needed
+          
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          
+      - name: execute py script # run main.py
+        run: 
+            python gotv_epg.py
+          
+      - name: commit files
+        run: |
+          git config --local user.email "prasunil058@gmail.com"
+          git config --local user.name "sunilprregmi"
+          git add -A
+          git diff-index --quiet HEAD || (git commit -a -m "scraped notices" --allow-empty)
+          
+      - name: push changes
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main 
